--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: aylmer
 Type: Package
 Title: A generalization of Fisher's exact test
-Version: 1.0-3
+Version: 1.0-4
 Date: 2008-10-11
 Author: Robin K. S. Hankin (R) and Luke G. West (C++)
 Depends: methods, Brobdingnag, partitions
-Maintainer:  <rksh1@cam.ac.uk>
+Maintainer: <hankin.robin@gmail.com>
 Description: A generalization of Fisher's exact test that allows for
-  structural zeros.
+        structural zeros.
 License: GPL-2
-Packaged: Thu Jan 15 21:43:31 2009; rksh
+Packaged: 2009-10-11 19:11:10 UTC; rksh
+Repository: CRAN
+Date/Publication: 2009-10-15 11:07:38
