--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: aylmer
 Type: Package
 Title: A generalization of Fisher's exact test
-Version: 1.0-4
+Version: 1.0-5
 Date: 2008-10-11
-Author: Robin K. S. Hankin (R) and Luke G. West (C++)
+Author: Robin K. S. Hankin (R) and Luke J. West (C++)
 Depends: methods, Brobdingnag, partitions
 Maintainer: <hankin.robin@gmail.com>
 Description: A generalization of Fisher's exact test that allows for
         structural zeros.
 License: GPL-2
-Packaged: 2009-10-11 19:11:10 UTC; rksh
+Packaged: 2010-03-16 20:46:55 UTC; rksh
 Repository: CRAN
-Date/Publication: 2009-10-15 11:07:38
+Date/Publication: 2010-04-03 07:59:27
